:hammer: Fixed Body Overflow

--- a/tailwind-client/npm-env/src/index.css
+++ b/tailwind-client/npm-env/src/index.css
@@ -7,8 +7,7 @@
   src: local('Proxima'), url(./assets/fonts/reg/ProximaNova-Regular.otf) format('otf');
 }
 
-html,
-body {
+html {
   overflow-x: hidden;
 }
 
